{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 666,
  "lineage": "815eb1d1-8475-3d0e-e42f-ed8c38c56b6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kube_cluster_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423301203:internet-gateway/igw-06cf4990ccf2ac951",
            "id": "igw-06cf4990ccf2ac951",
            "owner_id": "637423301203",
            "tags": {
              "Name": "kube"
            },
            "tags_all": {
              "Name": "kube"
            },
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "dependencies": [
            "aws_vpc.KubeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "KubeVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423301203:vpc/vpc-0458b3d707254ce01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.10.0.0/16",
            "default_network_acl_id": "acl-0b53904dfbc1f7646",
            "default_route_table_id": "rtb-0b1626a5fc5824dd0",
            "default_security_group_id": "sg-0a21b083b3a391962",
            "dhcp_options_id": "dopt-0761d751220a41b84",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0458b3d707254ce01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1626a5fc5824dd0",
            "owner_id": "637423301203",
            "tags": {
              "Name": "KubeVPC"
            },
            "tags_all": {
              "Name": "KubeVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.Backend_LB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "App_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:loadbalancer/app/Backend-LB/b36a722a479bcde8",
            "arn_suffix": "app/Backend-LB/b36a722a479bcde8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Backend-LB-558042472.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:loadbalancer/app/Backend-LB/b36a722a479bcde8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Backend-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-090f13038ee47865b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-095a7f55963ff7bd3"
              },
              {
                "subnet_id": "subnet-0d735790b6f42487d"
              }
            ],
            "subnets": [
              "subnet-095a7f55963ff7bd3",
              "subnet-0d735790b6f42487d"
            ],
            "tags": {
              "Name": "App_LB"
            },
            "tags_all": {
              "Name": "App_LB"
            },
            "vpc_id": "vpc-0458b3d707254ce01",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.SecurityGroups.aws_security_group.LoadBalancer_SG",
            "module.pubsubnet.aws_subnet.kubeSub",
            "module.pubsubnet2.aws_subnet.kubeSub"
          ]
        }
      ]
    },
    {
      "module": "module.Backend_LB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:listener/app/Backend-LB/b36a722a479bcde8/90feb1e794fd7518",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Backend-TG/c995f8963b1961ef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:listener/app/Backend-LB/b36a722a479bcde8/90feb1e794fd7518",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:loadbalancer/app/Backend-LB/b36a722a479bcde8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.Backend_LB.aws_lb.App_LB",
            "module.Backend_LB.aws_lb_target_group.App_TG",
            "module.SecurityGroups.aws_security_group.LoadBalancer_SG",
            "module.pubsubnet.aws_subnet.kubeSub",
            "module.pubsubnet2.aws_subnet.kubeSub"
          ]
        }
      ]
    },
    {
      "module": "module.Backend_LB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "App_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Backend-TG/c995f8963b1961ef",
            "arn_suffix": "targetgroup/Backend-TG/c995f8963b1961ef",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Backend-TG/c995f8963b1961ef",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:637423301203:loadbalancer/app/Backend-LB/b36a722a479bcde8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Backend-TG",
            "port": 30007,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "dependencies": [
            "aws_vpc.KubeVPC"
          ]
        }
      ]
    },
    {
      "module": "module.Backend_LB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "App_TG_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Backend-TG/c995f8963b1961ef-20240725112944686900000003",
            "port": 30007,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Backend-TG/c995f8963b1961ef",
            "target_id": "i-0e3f17ae08d5f6d51"
          },
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.Backend_LB.aws_lb_target_group.App_TG",
            "module.SecurityGroups.aws_security_group.WorkerNodeSG",
            "module.pubsubnet.aws_subnet.kubeSub",
            "module.workernodes.aws_instance.Node"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Backend-TG/c995f8963b1961ef-20240725115139019100000002",
            "port": 30007,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Backend-TG/c995f8963b1961ef",
            "target_id": "i-0a72a389cc2966367"
          },
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.Backend_LB.aws_lb_target_group.App_TG",
            "module.SecurityGroups.aws_security_group.WorkerNodeSG",
            "module.pubsubnet.aws_subnet.kubeSub",
            "module.workernodes.aws_instance.Node"
          ]
        }
      ]
    },
    {
      "module": "module.Frontend_LB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "App_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:loadbalancer/app/Frontend-LB/e7f354e6c9ba325c",
            "arn_suffix": "app/Frontend-LB/e7f354e6c9ba325c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Frontend-LB-1991415393.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:loadbalancer/app/Frontend-LB/e7f354e6c9ba325c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Frontend-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-090f13038ee47865b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-095a7f55963ff7bd3"
              },
              {
                "subnet_id": "subnet-0d735790b6f42487d"
              }
            ],
            "subnets": [
              "subnet-095a7f55963ff7bd3",
              "subnet-0d735790b6f42487d"
            ],
            "tags": {
              "Name": "App_LB"
            },
            "tags_all": {
              "Name": "App_LB"
            },
            "vpc_id": "vpc-0458b3d707254ce01",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.SecurityGroups.aws_security_group.LoadBalancer_SG",
            "module.pubsubnet.aws_subnet.kubeSub",
            "module.pubsubnet2.aws_subnet.kubeSub"
          ]
        }
      ]
    },
    {
      "module": "module.Frontend_LB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:listener/app/Frontend-LB/e7f354e6c9ba325c/27ccef43400a8e4a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Frontend-TG/58c05e1218610c3e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:listener/app/Frontend-LB/e7f354e6c9ba325c/27ccef43400a8e4a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:loadbalancer/app/Frontend-LB/e7f354e6c9ba325c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.Frontend_LB.aws_lb.App_LB",
            "module.Frontend_LB.aws_lb_target_group.App_TG",
            "module.SecurityGroups.aws_security_group.LoadBalancer_SG",
            "module.pubsubnet.aws_subnet.kubeSub",
            "module.pubsubnet2.aws_subnet.kubeSub"
          ]
        }
      ]
    },
    {
      "module": "module.Frontend_LB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "App_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Frontend-TG/58c05e1218610c3e",
            "arn_suffix": "targetgroup/Frontend-TG/58c05e1218610c3e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Frontend-TG/58c05e1218610c3e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:637423301203:loadbalancer/app/Frontend-LB/e7f354e6c9ba325c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Frontend-TG",
            "port": 30008,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "dependencies": [
            "aws_vpc.KubeVPC"
          ]
        }
      ]
    },
    {
      "module": "module.Frontend_LB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "App_TG_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Frontend-TG/58c05e1218610c3e-20240725112944756800000004",
            "port": 30008,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Frontend-TG/58c05e1218610c3e",
            "target_id": "i-0e3f17ae08d5f6d51"
          },
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.Frontend_LB.aws_lb_target_group.App_TG",
            "module.SecurityGroups.aws_security_group.WorkerNodeSG",
            "module.pubsubnet.aws_subnet.kubeSub",
            "module.workernodes.aws_instance.Node"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Frontend-TG/58c05e1218610c3e-20240725115139079900000003",
            "port": 30008,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423301203:targetgroup/Frontend-TG/58c05e1218610c3e",
            "target_id": "i-0a72a389cc2966367"
          },
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.Frontend_LB.aws_lb_target_group.App_TG",
            "module.SecurityGroups.aws_security_group.WorkerNodeSG",
            "module.pubsubnet.aws_subnet.kubeSub",
            "module.workernodes.aws_instance.Node"
          ]
        }
      ]
    },
    {
      "module": "module.SecurityGroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LoadBalancer_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423301203:security-group/sg-090f13038ee47865b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090f13038ee47865b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LB_SG",
            "name_prefix": "",
            "owner_id": "637423301203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LoadBalance_SG"
            },
            "tags_all": {
              "Name": "LoadBalance_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.KubeVPC"
          ]
        }
      ]
    },
    {
      "module": "module.SecurityGroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MasterNodeSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423301203:security-group/sg-0222dd943edd9a1d5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0222dd943edd9a1d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.10.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "MasterSG",
            "name_prefix": "",
            "owner_id": "637423301203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MasterSG"
            },
            "tags_all": {
              "Name": "MasterSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.pubsubnet.aws_subnet.kubeSub"
          ]
        }
      ]
    },
    {
      "module": "module.SecurityGroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WorkerNodeSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423301203:security-group/sg-0c5931b2884213bdf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5931b2884213bdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend-nodeport",
                "from_port": 30007,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30007
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend-nodeport",
                "from_port": 30008,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30008
              },
              {
                "cidr_blocks": [
                  "172.10.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "WorkerSG",
            "name_prefix": "",
            "owner_id": "637423301203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WorkerSG"
            },
            "tags_all": {
              "Name": "WorkerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.pubsubnet.aws_subnet.kubeSub"
          ]
        }
      ]
    },
    {
      "module": "module.masternode",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:637423301203:instance/i-0415df02b94e8ee51",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0415df02b94e8ee51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "KubeBS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03fae64ad92c08634",
            "private_dns": "ip-172-10-0-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.10.0.241",
            "public_ip": "54.221.50.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-067309b6ca9f7bf85",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d735790b6f42487d",
            "tags": {
              "Name": "master-Node-1"
            },
            "tags_all": {
              "Name": "master-Node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0222dd943edd9a1d5"
            ]
          },
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.SecurityGroups.aws_security_group.MasterNodeSG",
            "module.pubsubnet.aws_subnet.kubeSub"
          ]
        }
      ]
    },
    {
      "module": "module.pubsubnet",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "kube_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423301203:route-table/rtb-0b1626a5fc5824dd0",
            "default_route_table_id": "rtb-0b1626a5fc5824dd0",
            "id": "rtb-0b1626a5fc5824dd0",
            "owner_id": "637423301203",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cf4990ccf2ac951",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kube_route_table"
            },
            "tags_all": {
              "Name": "kube_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kube_cluster_gw",
            "aws_vpc.KubeVPC"
          ]
        }
      ]
    },
    {
      "module": "module.pubsubnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubeSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423301203:subnet/subnet-0d735790b6f42487d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d735790b6f42487d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423301203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubeSub"
            },
            "tags_all": {
              "Name": "kubeSub"
            },
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "dependencies": [
            "aws_vpc.KubeVPC"
          ]
        }
      ]
    },
    {
      "module": "module.pubsubnet2",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "kube_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423301203:route-table/rtb-0b1626a5fc5824dd0",
            "default_route_table_id": "rtb-0b1626a5fc5824dd0",
            "id": "rtb-0b1626a5fc5824dd0",
            "owner_id": "637423301203",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cf4990ccf2ac951",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kube_route_table"
            },
            "tags_all": {
              "Name": "kube_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kube_cluster_gw",
            "aws_vpc.KubeVPC"
          ]
        }
      ]
    },
    {
      "module": "module.pubsubnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubeSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423301203:subnet/subnet-095a7f55963ff7bd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095a7f55963ff7bd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423301203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubeSub"
            },
            "tags_all": {
              "Name": "kubeSub"
            },
            "vpc_id": "vpc-0458b3d707254ce01"
          },
          "dependencies": [
            "aws_vpc.KubeVPC"
          ]
        }
      ]
    },
    {
      "module": "module.workernodes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:637423301203:instance/i-0e3f17ae08d5f6d51",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3f17ae08d5f6d51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "KubeBS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae1307b00fe69619",
            "private_dns": "ip-172-10-0-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.10.0.117",
            "public_ip": "54.90.82.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09f74d99270442db9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d735790b6f42487d",
            "tags": {
              "Name": "worker-Node-1"
            },
            "tags_all": {
              "Name": "worker-Node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5931b2884213bdf"
            ]
          },
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.SecurityGroups.aws_security_group.WorkerNodeSG",
            "module.pubsubnet.aws_subnet.kubeSub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:637423301203:instance/i-0a72a389cc2966367",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a72a389cc2966367",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "KubeBS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff5603e03cb5064d",
            "private_dns": "ip-172-10-0-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.10.0.106",
            "public_ip": "18.234.46.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09368fea22c586e35",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d735790b6f42487d",
            "tags": {
              "Name": "worker-Node-2"
            },
            "tags_all": {
              "Name": "worker-Node-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5931b2884213bdf"
            ]
          },
          "dependencies": [
            "aws_vpc.KubeVPC",
            "module.SecurityGroups.aws_security_group.WorkerNodeSG",
            "module.pubsubnet.aws_subnet.kubeSub"
          ]
        }
      ]
    }
  ]
}